# RencodeX

./: .gitignore  README.md  dashboard.patch  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  discord_fields.rs  filename.rs  lib.rs  main.rs  media.rs  models.rs  notify.rs  regex.rs  state.rs  tests.rs  tests_extended.rs  utils.rs
src-tauri/src/commands/: discord.rs  encoding.rs  files.rs  mod.rs  settings.rs
src-tauri/src/entities/: encode_sessions.rs  encoded_files.rs  extract_sessions.rs  file_records.rs  mod.rs  stats.rs
src-tauri/src/migrations/: m20240101_000001_init.sql
src-tauri/src/naming/: filename.rs  mod.rs  regex.rs
src-tauri/src/services/: discord_bot.rs  media.rs  mod.rs  notify.rs
src-tauri/tests/: tests.rs  tests_extended.rs
src/components/: ControlBar.svelte  Dashboard.svelte  DropZone.svelte  EncodingSettings.svelte  FileLangModal.svelte  FileModal.svelte  FileRenameModal.svelte  FileTable.svelte  LangPopover.svelte  LangSelector.svelte  LogConsole.svelte  OutputDirPicker.svelte  ProgressPanel.svelte  RenameModal.svelte  RenamingSettings.svelte  Settings.svelte  ToastNotif.svelte  TopBar.svelte
src/lib/: utils.ts
src/lib/stores/: encoder.svelte.ts  encoding.store.svelte.ts  files.store.svelte.ts  naming.ts  prefs.store.svelte.ts  stats.svelte.ts  theme.svelte.ts  toasts.svelte.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/ui/: ControlBar.svelte  FileTable.svelte  FileToolbar.svelte  OutputDirPicker.svelte  ProgressPanel.svelte  TopBar.svelte
src/ui/Log/: LogConsole.svelte
src/ui/dashboard/: Dashboard.svelte  EncodageTab.svelte  ExtractionTab.svelte  HistoryTab.svelte
src/ui/encoding/: AudioTab.svelte  ContainerTab.svelte  EncodingSettings.svelte  LanguagesTab.svelte  PresetsTab.svelte  SubtitlesTab.svelte  VideoTab.svelte
src/ui/modals/: FileLangModal.svelte  FileModal.svelte  FileRenameModal.svelte
src/ui/popovers/: LangPopover.svelte
src/ui/renaming/: FormatTab.svelte  PreviewTab.svelte  RenamingSettings.svelte  TagsTab.svelte  TeamTab.svelte
src/ui/setting/: BotTab.svelte  DiscordTab.svelte  EnvTab.svelte  FfmpegTab.svelte  InterfaceTab.svelte  NotifRow.svelte  PresetsTab.svelte  Settings.svelte
