[package]
name = "rencodex"
version = "0.1.0"
description = "RenCodeX – Video Encoder (H265/HEVC NVENC)"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
tokio                     = { version = "1", features = ["full"] }
regex                     = "1"
log                       = "0.4"
env_logger                = "0.11"
once_cell                 = "1"
anyhow                    = "1"
lettre                    = { version = "0.11", features = ["smtp-transport", "native-tls"] }
dirs                      = "5"
reqwest                   = { version = "0.12", features = ["json"] }
chrono                    = { version = "0.4", features = ["serde"] }
serenity                  = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
